Fixed div overflow

--- a/CSS/alignment.css
+++ b/CSS/alignment.css
@@ -22,7 +22,6 @@ p:last-child {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-height: 50vh;
 }
 
 .space-between div {
